# youtube_data_pipeline

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  client.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: cloud-run.yml
notebooks/: alem_da_ilusao.ipynb  data-analysis.ipynb  pega_comments.ipynb  youtube_api.ipynb
src/: pega_dados.py  send_msg.py
tests/: test_pega_dados.py
